--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,12 @@ cache:
   - /home/travis/.vagrant.d/boxes
 
 install:
-# Install libvrt & KVM (see https://github.com/alvistack/ansible-role-virtualbox/blob/master/.travis.yml)
-- sudo apt-get update && sudo apt-get install -y bridge-utils dnsmasq-base ebtables libvirt-bin libvirt-dev qemu-kvm qemu-utils ruby-dev
+# Install VirtualBox
+- sudo wget https://download.virtualbox.org/virtualbox/6.1.4/virtualbox-6.1_6.1.4-136177~Ubuntu~bionic_amd64.deb
+- sudo dpkg -i virtualbox-6.1_6.1.4-136177~Ubuntu~bionic_amd64.deb
+
+# How did the VirtualBox installation go?
+- VBoxManage --version
 
 # Download Vagrant & Install Vagrant package
 - sudo wget -nv https://releases.hashicorp.com/vagrant/2.2.7/vagrant_2.2.7_x86_64.deb
@@ -18,9 +22,6 @@ install:
 # Vagrant correctly installed?
 - vagrant --version
 
-# Install vagrant-libvirt Vagrant plugin
-- sudo vagrant plugin install vagrant-libvirt
-
 script:
-- sudo vagrant up --provider=libvirt
+- sudo vagrant up
 - sudo vagrant ssh -c "echo 'hello world!'"
